fix: results are too narrow when window height is small

--- a/stylebot.css
+++ b/stylebot.css
@@ -18,7 +18,7 @@ body {
     left: 1rem;
     right: 1rem;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(60vh, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(max(60vh, 20vw), 1fr));
 }
 
 /*no idea what this is, some line*/
